--- a/client/messageList.html
+++ b/client/messageList.html
@@ -3,7 +3,7 @@
     <table class="table table-striped">
     {{#each msgs}}
         <tr>
-            <td class="author-message">{{message}}</td> - <td class="author-meta"><img src="{{avatar}}" alt="{{author}}"> {{author}} </td>
+            <td class="author-message">{{{message}}}</td> - <td class="author-meta"><img src="{{avatar}}" alt="{{author}}"> {{author}} </td>
         </tr>
     {{/each}}
     </table>
