--- a/main.html
+++ b/main.html
@@ -7,6 +7,11 @@
     <div class="navbar">
         <div class="navbar-inner">
             <a href="/" class="brand">Conversify</a>
+              <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </a>
             <ul class="nav pull-right">
                 <li>
                     {{loginButtons}}
