--- a/client/main.html
+++ b/client/main.html
@@ -2,16 +2,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
+    <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
     <div class="navbar">
         <div class="navbar-inner">
             <a href="/" class="brand">Conversify</a>
-              <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </a>
             <ul class="nav pull-right">
                 <li>
                     {{loginButtons}}
