--- a/client/newMessage.html
+++ b/client/newMessage.html
@@ -1,6 +1,6 @@
 <template name='newMessage'>
     <form class="form-horizontal">
-            <input type="text" name="message" placeholder="Enter your messages here">
+            <input type="text" name="message" placeholder="Enter your messages here" autofocus required>
             <input type="Submit" value="Send message" class="btn">
     </form>
 </template>
