Fix homepage about text and add name on mobile

--- a/client/main.html
+++ b/client/main.html
@@ -30,8 +30,8 @@
             </div>
             <div class="about">
                 <h3 class="intro">About</h3>
-                <p>Conversify is a web-based real-time chat application, designed for chatting in public. There is a pleasing design for both desktop and mobile browsers. Conversify supports <a href="http://www.emoji-cheat-sheet.com/">Emoji</a> too.</p>
-                <p>Conversify is built on top of Open Source technologies. We are using Meteor.js on both client and server side, apart from that we are using Bootstrap for some styling and Moment.js for generating beautiful timestamps. For authentication we are using Twitter OAuth which is the source for user meta information like Avatar and Name.</p>
+                <p>Conversify is a web-based real-time chat application. It has a pleasing design for both desktop and mobile browsers. Conversify supports <a href="http://www.emoji-cheat-sheet.com/">Emoji</a> too.</p>
+                <p>Conversify is built on top of Open Source technologies. We use Meteor.js on both client and server side. Apart from that we use Bootstrap for some styling and Moment.js for generating beautiful timestamps. For authentication we are using Twitter OAuth which is the source for user meta information like Avatar and Name.</p>
         </div>
             <div class="footer">
                 <p class="inner">A project created, maintained, and designed by <a href="http://www.skippednote.com">Bassam Ismail</a>.<br> Many thanks to <a href="http://www.alvimurtaza.com">Alvi Murtaza</a> and other contributors.<br>&copy; 2014 - <a href="http://www.skippednote.com">skippednote</a></p>
